Bug 348779: Searchbar demands too much space.  Non-functional cleanup commit that never made it to the trunk when the rest of the Fx2 theme landed. r=gavin
UltraBlame original commit: 95fb9fb1acb364b8f601f56ca273589267c11422

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -839,14 +839,6 @@ toolbar[iconsize="small"] #paste-button:not([disabled="true"]):hover:active {
   -moz-margin-end: 5px;
 }
 
-
-
-
-
-#urlbar-icons-spacer {
-  width: 100px;
-}
-
 #urlbar-icons {
   height: 18px;
 }
